--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/elfensky/react-ghpages/main/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="https://raw.githubusercontent.com/elfensky/react-ghpages/main/assets/index.17ffe606.js"></script>
-    <link rel="modulepreload" href="https://raw.githubusercontent.com/elfensky/react-ghpages/main/assets/vendor.14147225.js">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/elfensky/react-ghpages/main/assets/index.cd9c0392.css">
   </head>
   <body>
     <div id="root"></div>
-    
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
